move common functions to separate file

--- a/task1/index.html
+++ b/task1/index.html
@@ -5,6 +5,7 @@
     <title>HW7</title>
 </head>
 <body>
+<script src="../shared/functions.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
